--- a/css/style.css
+++ b/css/style.css
@@ -423,6 +423,48 @@ img {
     width: 300px;
   }
 
+  .footer-navigation {
+    background: var(--basic-blue);
+  }
+
+  a.footer-navigation-logo {
+    background: var(--basic-red);
+    display: block;
+    width: 220px;
+    height: 68px;
+  }
+
+  .footer-navigation p,
+  .footer-navigation a {
+    font-family: Cuprum, Arial, sans-serif;
+    font-size: 18px;
+    line-height: 24px;
+    color: var(--basic-extra-white-footer-text);
+  }
+
+  .footer-navigation-list {
+    list-style: none;
+  }
+  
+  .footer-navigation-item a {
+    color: var(--basic-extra-white-footer-nav);
+  }
+
+  .link-orange a {
+    color: var(--basic-light-yellow);
+  }
+
+  .footer-socials {
+    background: var(--basic-dark-blue);
+  }
+
+  .footer-socials {
+    font-family: Cuprum, Arial, sans-serif;
+    font-size: 16px;
+    line-height: 18px;
+    color: var(--basic-white); 
+  }
+
   
     
 
