--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
     --basic-gray3: #C5C5C5;
     --basic-gray4: #B7BFC8;
     --basic-gray5: #ABABAB;
+    --basic-gray6: #F4F4F4;
     --border-producer: #EAEAEA;
     --basic-white-header: #F9F5F0;
     --basic-extra-white-footer-text: #F3F7F9;
@@ -27,6 +28,7 @@
     --basic-extra-white-catalog-h1: #F2F6F8;
     --basic-light-pink: #F7F3EC;
     --promo-buttom: rgba(255, 255, 255, 0.3);
+    --shadow: rgba(0, 0, 0, 0.25);
 
   /* :hover */
     --green-hover: #5FBB2D;
@@ -68,6 +70,8 @@ img {
   }
   
   .header-section1 {
+    width: 1200px;
+    height: 42px;
     background: var(--basic-dark-blue);  
   }
 
@@ -505,6 +509,65 @@ img {
   .footer-socials-link:active {
     color: var(--basic-red);
     text-decoration-line: none;
+  }
+
+  .modal-question {
+    width: 620px;
+    height: 430px;
+    background: var(--basic-white);
+    border-top: 7px solid var(--basic-red);
+  }
+
+  .modal-question label {
+    font-family: "Cuprum", Arial, sans-serif;
+    font-size: 18px;
+    line-height: 24px;
+    color: var(--basic-black);
+  }
+
+  input.name-field,
+  input.email {
+    width: 220px;
+    height: 38px;
+    border: 2px solid var(--basic-gray3);
+    box-sizing: border-box;
+    border-radius: 2px;
+    font-family: "PT Sans", Arial, sans-serif;
+    font-size: 13px;
+    line-height: 24px;
+    color: var(--basic-gray);
+  }
+
+  textarea.comment {
+    width: 460px;
+    height: 114px;
+    border: 2px solid var(--basic-gray3);
+    box-sizing: border-box;
+    border-radius: 2px;
+    font-family: "PT Sans", Arial, sans-serif;
+    font-size: 13px;
+    line-height: 24px;
+    color: var(--basic-gray);
+  }
+
+  .submit {
+    width: 620px;
+    height: 112px;
+    background: var(--basic-gray6);
+  }
+
+  .submit input {
+    width: 460px;
+    height: 38px;
+    background: var(--basic-red);
+    filter: drop-shadow(0px 4px 4px var(--shadow));
+    font-family: "Cuprum", Arial, sans-serif;
+    font-size: 14px;
+    line-height: 18px;
+    text-transform: uppercase;
+    color: var(--basic-white);
+    text-align: center;
+    line-height: 32px;
   }
 
   
