--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@
     --basic-light-pink: #F7F3EC;
     --promo-buttom: rgba(255, 255, 255, 0.3);
     --shadow: rgba(0, 0, 0, 0.25);
+    --background-modal: #565656;
+    --shadow-modaal: 0px 0px 14.7px rgba(47, 42, 43, 0.5);
 
   /* :hover */
     --green-hover: #5FBB2D;
@@ -568,6 +570,14 @@ img {
     color: var(--basic-white);
     text-align: center;
     line-height: 32px;
+  }
+
+  .modal-map {
+    width: 943px;
+    height: 449px;
+    border-top: 7px solid var(--basic-red);
+    background: var(--background-modal);
+    box-shadow: 0px 0px 14.7px var(--shadow-modaal);
   }
 
   
