--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
     --basic-gray4: #B7BFC8;
     --basic-gray5: #ABABAB;
     --basic-gray6: #F4F4F4;
+    --basic-gray7: #F1F1F1;
     --border-producer: #EAEAEA;
     --basic-white-header: #F9F5F0;
     --basic-extra-white-footer-text: #F3F7F9;
@@ -579,6 +580,39 @@ img {
     background: var(--background-modal);
     box-shadow: 0px 0px 14.7px var(--shadow-modaal);
   }
+
+  .modal-order {
+    width: 620px;
+    height: 282px;
+    background: var(--basic-white);
+    border-top: 7px solid var(--basic-red);
+  }
+
+  .modal-order p {
+    font-family: "Cuprum", Arial, sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    color: var(--basic-black);
+  }
+
+  .submit-order {
+    width: 620px;
+    height: 112px;
+    background: var(--basic-gray7);
+  }
+
+  .button-white {
+    Width: 192px;
+    height: 38px;
+    text-align: center;
+    line-height: 38px;
+    background: var(--basic-white);
+    text-transform: uppercase;
+  }
+
+  .button-white a {
+    color: var(--basic-black);
 
   
     
