--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,7 @@ img {
   .header-logo {
     width: 220px;
     height: 47px;
-    border: 3px solid red;
-    background-image: url("img/logo.png");
-    background-position: top center;
-    background-repeat: no-repeat;
+    background: var(--basic-red);
   }
 
   a.header-logo:active {
