--- a/css/style.css
+++ b/css/style.css
@@ -61,28 +61,38 @@ body {
     background-color: var(--basic-white);
   }
 
-a {
+  a {
     text-decoration: none;
   }
   
-img {
+  img {
     max-width: 100%;
     height: auto;
   }
 
-.header {
+  .header {
+    display: grid;
+    height: 320px;
+    grid-template-rows: min-content 158px min-content;
     background: var(--basic-extra-white-catalog-h1);
+  }
+
+  .container-header-logo {
+    display: grid;
+    grid-template-columns: 220px 1fr 150px 150px 150px;
+    width: 940px;
+    margin: 0 auto;
   }
   
   .header-section-logo {
-    /* width: 1200px;
-    height: 42px; */
+    height: 42px;
     background: var(--basic-dark-blue);  
   }
 
   .header-section-logo a {
     color: var(--basic-white);
     font-size: 18px;
+    line-height: 24px;
   }
 
   .header-logo {
@@ -99,6 +109,7 @@ img {
     background: var(--basic-dark-blue);
     border: none;
     font-size: 18px;
+    line-height: 24px;
     font-family: "Cuprum", Arial, sans-serif;
   }
 
@@ -118,6 +129,7 @@ img {
   }
 
   .header-link-order {
+    height: 42px;
     background-color: var(--basic-green);
   }
 
@@ -125,7 +137,12 @@ img {
     background-color: var(--green-hover);
   }
 
-.header-section-centr {
+  .header-section-centr {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 940px;
+    height: 158px;
+    margin: 0 auto;
     background-color: transparent;
   }
 
@@ -165,15 +182,22 @@ img {
     color: var(--basic-gray3);
   }
 
-.header-navigation {
+  .header-navigation {
+    width: 940px;
+    margin: 0 auto;
+    box-shadow: inset 0px -5px 0px var(--blue-hover);
     background-color: var(--basic-blue);
   }
 
-.header-navigation-list {
-    list-style: none;
+  .header-navigation-list {
+    display: grid;
+    grid-template-columns: repeat( 7, min-content);
+    grid-gap: 56px;
+    margin: 16px auto 20px;
+    list-style: none; 
   }
 
-.header-navigation-list a {
+  .header-navigation-list a {
     color: var(--basic-white);
     font-size: 18px;
   }
@@ -186,7 +210,22 @@ img {
     background-color: var(--dark-blue-active);
   }
 
+  .main {
+    width: 940px;
+    margin: 0 auto;
+  }
+
   .main-promo-list {
+    display: grid;
+    grid-template-columns: 300px 300px 300px;
+    grid-template-rows: 123px 123px 123px;
+    grid-template-areas:
+    "promo-materials promo-instrument promo-technic"
+    "main-promo-slider main-promo-slider promo-sale"
+    "main-promo-slider main-promo-slider promo-delivery";
+    grid-gap: 20px;
+    margin: 0;
+    padding: 0;
     list-style: none;
   }
 
@@ -194,6 +233,15 @@ img {
     width: 300px;
     height: 123px;
     color: var(--basic-white);
+  }
+
+  .main-promo-slider {
+    width: 620px;
+    height: 266px;
+  }
+
+  .slide-header {
+    position: absolute;
   }
 
   .main-promo-item h2 {
@@ -216,10 +264,12 @@ img {
   } 
 
   .promo-materials {
+    grid-area: promo-materials;
     background-color: var(--yellow-materials);
   }
 
   .promo-instrument {
+    grid-area: promo-instrument;
     background-color: var(--extra-blue-instrument);
   }
 
@@ -232,18 +282,22 @@ img {
   }
 
   .promo-technic {
+    grid-area: promo-technic;
     background-color: var(--purple-technic);
   }
 
   .promo-sale {
+    grid-area: promo-sale;
     background-color: var(--light-green-sale);
   }
 
   .promo-delivery {
+    grid-area: promo-delivery;
     background-color: var(--yellow-delivery);
   }
 
   .main-promo-slide {
+    grid-area: main-promo-slide;
     width: 620px;
     height: 266px;
     color: var(--basic-white);
@@ -295,16 +349,22 @@ img {
   }
 
   .main-product-list {
+    display: grid;
+    grid-template-columns: repeat( 4, 220px);
+    grid-gap: 20px;
     Width: 940px;
     height: 318px;
     list-style: none;
+    margin: 0;
+    padding: 0;
   }
 
   .main-product-item {
     display: inline-block;
-    Width: 220px;
+    Width: 218px;
     height: 318px;
     text-align: center;
+    border: 1px solid var(--border-producer);
   }
 
   .main-product-item h3 {
@@ -313,6 +373,10 @@ img {
     line-height: 20px;
     font-weight: 700;
     color: var(--basic-black);
+  }
+
+  .new {
+    position: absolute;
   }
 
   .old-price {
@@ -347,14 +411,18 @@ img {
   }
 
   .main-producer-list {
+    display: grid;
+    grid-template-columns: repeat( 4, 220px);
+    grid-gap: 20px;
     Width: 940px;
+    margin: 0;
+    padding: 0;
     height: auto;
     list-style: none;
   }
 
   .main-producer-item {
-    display: inline-block;
-    Width: 220px;
+    Width: 218px;
     height: 145px;
     border: 1px solid var(--border-producer);
   }
@@ -408,6 +476,11 @@ img {
     display: none;
   }
 
+  .main-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
   .main-info-text-list {
     list-style: none;
   }
@@ -431,6 +504,18 @@ img {
     width: 300px;
   }
 
+  .footer {
+    height: 300px;
+  }
+
+  .container-footer-navigation {
+    display: grid;
+    grid-template-columns: 393px 547px;
+    width: 940px;
+    height: 193px;
+    margin: 0 auto;
+  }
+
   .footer-navigation {
     background: var(--basic-blue);
   }
@@ -451,11 +536,23 @@ img {
   }
 
   .footer-navigation-list {
+    display: grid;
+    grid-template-columns: repeat( 5, min-content);
+    margin: 0;
+    padding: 0;
     list-style: none;
   }
   
-  .footer-navigation-item a {
+  .footer-navigation-item {
     color: var(--basic-extra-white-footer-nav);
+  }
+
+  .container-footer-socials {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 940px;
+    height: 107px;
+    margin: 0 auto;
   }
 
   .footer-socials {
@@ -470,6 +567,8 @@ img {
   }
 
   .footer-socials-list {
+    margin: 0;
+    padding: 0;
     list-style: none;
   }
 
@@ -817,9 +916,18 @@ img {
     font-size: 13px;
     line-height: 24px;
     color: var(--basic-black);
-
   }
 
+  .page {
+    height: 100%;
+  }
+
+  .page-body {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    align-content: start;
+  }
   
 
   
